# dune-mcp

./: CLAUDE.md  Dune API MCP Server Specification.md  README.md  fastmcp.json  pyproject.toml
.claude/: settings.local.json
openspec/: project.md
openspec/changes/add-core-server/: design.md  proposal.md  tasks.md
openspec/changes/add-core-server/specs/core-server/: spec.md
openspec/changes/add-execution-tools/: proposal.md  tasks.md
openspec/changes/add-execution-tools/specs/execution-tools/: spec.md
openspec/changes/add-mcp-prompts/: proposal.md  tasks.md
openspec/changes/add-mcp-prompts/specs/mcp-prompts/: spec.md
openspec/changes/add-mcp-resources/: proposal.md  tasks.md
openspec/changes/add-mcp-resources/specs/mcp-resources/: spec.md
openspec/changes/add-query-management/: proposal.md  tasks.md
openspec/changes/add-query-management/specs/query-management/: spec.md
openspec/changes/add-run-sql/: proposal.md  tasks.md
openspec/changes/add-run-sql/specs/adhoc-sql/: spec.md
src/mcp_server_dune/: __init__.py  __main__.py  server.py
